--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Website Name{% block title %}{% endblock %}</title>
-    {% block stylesheets %}{% endblock %}
+    {% block head %}
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Website Name{% block title %}{% endblock %}</title>
+        <link rel="stylesheet" href="css/main.css">
+        {% block stylesheets %}{% endblock %}
+    {% endblock %}
 </head>
 <body>
-    {% block body %}{% endblock %}
+    {% block content %}{% endblock %}
     {% block javascripts %}{% endblock %}
 </body>
 </html>
