webpack injecting bundled js into Twig templates

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,8 @@
 </head>
 <body>
     {% block content %}{% endblock %}
-    {% block javascripts %}{% endblock %}
+    {% block javascripts %}
+        {% webpack_entry_js 'main' %}
+    {% endblock %}
 </body>
 </html>
