disable webpack extension in container defs

--- a/app/View/base.html.twig
+++ b/app/View/base.html.twig
@@ -12,7 +12,7 @@
     <body>
         {% block content %}{% endblock %}
         {% block javascripts %}
-        {% webpack_entry_js 'main' %}
+        {# {% webpack_entry_js 'main' %} #}
         {% endblock %}
     </body>
 </html>
